@@ -1,0 +1,78 @@
+
+// This file has been generated by the GUI designer. Do not modify.
+namespace MultiMC
+{
+	public partial class ChangeIconDialog
+	{
+		private global::Gtk.ScrolledWindow scrolledwindow1;
+		private global::Gtk.IconView iconView;
+		private global::Gtk.Button buttonCancel;
+		private global::Gtk.Button buttonOk;
+		
+		protected virtual void Build ()
+		{
+			global::Stetic.Gui.Initialize (this);
+			// Widget MultiMC.ChangeIconDialog
+			this.WidthRequest = 600;
+			this.HeightRequest = 400;
+			this.Name = "MultiMC.ChangeIconDialog";
+			this.Title = global::Mono.Unix.Catalog.GetString ("Change Icon");
+			this.WindowPosition = ((global::Gtk.WindowPosition)(4));
+			// Internal child MultiMC.ChangeIconDialog.VBox
+			global::Gtk.VBox w1 = this.VBox;
+			w1.Name = "dialog1_VBox";
+			w1.BorderWidth = ((uint)(2));
+			// Container child dialog1_VBox.Gtk.Box+BoxChild
+			this.scrolledwindow1 = new global::Gtk.ScrolledWindow ();
+			this.scrolledwindow1.CanFocus = true;
+			this.scrolledwindow1.Name = "scrolledwindow1";
+			this.scrolledwindow1.ShadowType = ((global::Gtk.ShadowType)(1));
+			// Container child scrolledwindow1.Gtk.Container+ContainerChild
+			this.iconView = new global::Gtk.IconView ();
+			this.iconView.CanFocus = true;
+			this.iconView.Name = "iconView";
+			this.scrolledwindow1.Add (this.iconView);
+			w1.Add (this.scrolledwindow1);
+			global::Gtk.Box.BoxChild w3 = ((global::Gtk.Box.BoxChild)(w1 [this.scrolledwindow1]));
+			w3.Position = 0;
+			// Internal child MultiMC.ChangeIconDialog.ActionArea
+			global::Gtk.HButtonBox w4 = this.ActionArea;
+			w4.Name = "dialog1_ActionArea";
+			w4.Spacing = 10;
+			w4.BorderWidth = ((uint)(5));
+			w4.LayoutStyle = ((global::Gtk.ButtonBoxStyle)(4));
+			// Container child dialog1_ActionArea.Gtk.ButtonBox+ButtonBoxChild
+			this.buttonCancel = new global::Gtk.Button ();
+			this.buttonCancel.CanDefault = true;
+			this.buttonCancel.CanFocus = true;
+			this.buttonCancel.Name = "buttonCancel";
+			this.buttonCancel.UseStock = true;
+			this.buttonCancel.UseUnderline = true;
+			this.buttonCancel.Label = "gtk-cancel";
+			this.AddActionWidget (this.buttonCancel, -6);
+			global::Gtk.ButtonBox.ButtonBoxChild w5 = ((global::Gtk.ButtonBox.ButtonBoxChild)(w4 [this.buttonCancel]));
+			w5.Expand = false;
+			w5.Fill = false;
+			// Container child dialog1_ActionArea.Gtk.ButtonBox+ButtonBoxChild
+			this.buttonOk = new global::Gtk.Button ();
+			this.buttonOk.CanDefault = true;
+			this.buttonOk.CanFocus = true;
+			this.buttonOk.Name = "buttonOk";
+			this.buttonOk.UseStock = true;
+			this.buttonOk.UseUnderline = true;
+			this.buttonOk.Label = "gtk-ok";
+			this.AddActionWidget (this.buttonOk, -5);
+			global::Gtk.ButtonBox.ButtonBoxChild w6 = ((global::Gtk.ButtonBox.ButtonBoxChild)(w4 [this.buttonOk]));
+			w6.Position = 1;
+			w6.Expand = false;
+			w6.Fill = false;
+			if ((this.Child != null)) {
+				this.Child.ShowAll ();
+			}
+			this.DefaultWidth = 600;
+			this.DefaultHeight = 400;
+			this.Show ();
+			this.Response += new global::Gtk.ResponseHandler (this.OnResponse);
+		}
+	}
+}
