@@ -1,3 +1,11 @@
+2012-01-29  Andrew Okin  <razorblades13@gmail.com>
+
+	* MultiMC.csproj, MainWindow.cs, Resources.cs,
+	  ChangeIconDialog.cs, MultiMC.MainWindow.cs,
+	  MultiMC.ChangeIconDialog.cs: Added ability to change icons.
+
+	* ModLoaderProblems.cs: Fixed a minor parsing bug
+
 2012-01-28  Andrew Okin  <razorblades13@gmail.com>
 
 	* ConsoleWindow.cs, Problems.cs, ModLoaderProblems.cs: Added
